<resources>
    <string name="app_name">仓库条码系统</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_username">用户名错误</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_sign_in">登录失败,请检查用户账号、密码和网络环境</string>
    <string name="error_field_required">此处为必填项</string>
    <string name="permission_rationale">"未获得指定权限"</string>
    <string name="success_sign_in">登录成功</string>
    <string name="text_materialCodeLength">物料长度</string>
    <string name="text_poCodeLength">采购单号长度</string>
    <string name="text_batchCodePrefixLength">批号前缀长度</string>
    <string name="text_batchCodeLength">批号条码长度</string>
    <string name="text_warehouseCodeLength">仓库编码长度</string>
    <string name="text_moCodeLength">生产单号长度</string>
    <string name="text_save">保存</string>
    <string name="text_barcode">条码</string>
    <string name="text_submit">提交</string>
    <string name="text_cancel">取消</string>
    <string name="text_delete">删除</string>
    <string name="error_net_request">网络请求失败</string>
    <string name="text_commit_fail">提交失败</string>
    <string name="text_committed">已提交</string>
    <string name="toast_reach_upper_limit">数量超出限制</string>
    <string name="toast_no_record">没有任何记录</string>
    <string name="text_clear">清空</string>
    <string name="text_delete_confirmation">确认删除？</string>
    <string name="text_check">查询</string>
    <string name="text_quantity">数量</string>
    <string name="text_add">增加</string>
    <string name="text_purchase_list">采购单</string>
    <string name="text_invpicking">领料单</string>
    <string name="text_bincode_barcode">库位条码</string>
    <string name="text_material_barcode">物料编号</string>
    <string name="text_prooutput_list">入库单</string>
    <string name="text_recommend_bin">推荐库位</string>
    <string name="text_shipment_list_code">发货单号</string>
    <string name="text_from_bin">从库位</string>
    <string name="text_to_bin">至库位</string>
    <string name="hint_input_quantity">请输入数量</string>
    <string name="text_quantity_colon">数量:</string>
    <string name="text_bin_colon">库位:</string>
    <string name="text_warehouse_colon">仓库:</string>
    <string name="text_material_colon">物料编号:</string>
    <string name="text_to_bin_colon">至库位:</string>
    <string name="text_material_name_colon">物料名称:</string>
    <string name="text_from_bin_colon">从库位:</string>
    <string name="title_recommend_bin">选择推荐库位</string>
    <string name="text_pick_quantity_colon">领料数:</string>
    <string name="canvas_swipe_remove">向右划动删除记录</string>
    <string name="text_name_colon">名称:</string>
    <string name="dialog_title_attention">注意</string>
    <string name="dialog_submit_tip">确认提交数据？</string>
    <string name="dialog_clear_tip">确认清空当前界面数据？</string>
    <string name="text_bin">库位</string>
    <string name="text_material">物料</string>
    <string name="text_name">名称</string>
    <string name="togglebutton_off_default">▲▲ 推荐库位 ▲▲</string>
    <string name="togglebutton_on_default">▼▼ 推荐库位 ▼▼</string>
    <string name="text_confirm">确认</string>
    <string name="toast_please_enter_or">请输入%s或%s</string>
    <string name="title_func0">采购收货</string>
    <string name="title_func1">生产领料</string>
    <string name="title_func2">盘点</string>
    <string name="title_func3">收货上架</string>
    <string name="title_func4">领料确认</string>
    <string name="title_func5">复盘</string>
    <string name="title_func6">产出入库</string>
    <string name="title_func7">仓库发货</string>
    <string name="title_func8">单个移库</string>
    <string name="title_func9">产出上架</string>
    <string name="title_func10">包装确认</string>
    <string name="title_func11">SKU查询</string>
    <string name="title_func12">批量下架</string>
    <string name="title_func13">批量上架</string>
    <string name="title_func14">系统设置</string>
    <string name="formatting_toast_could_not_be_empty">%s不能为空</string>
    <string name="formatting_title_recommend_down">▼▼ %s推荐库位 ▼▼</string>
    <string name="formatting_title_recommend_up">▲▲ %s推荐库位 ▲▲</string>
    <string name="toast_save_successfully">保存成功</string>
    <string name="formatting_text_incorrect_format">%s格式错误</string>
    <string name="toast_no_committed_data">没有提交数据</string>
    <string name="toast_committing">提交中</string>
    <string name="formatting_toast_committed">提交完成</string>
    <string name="hint_purchase_list_barcode">采购单条码</string>
    <string name="hint_bincode">库位条码</string>
    <string name="hint_material_barcode">物料条码</string>
    <string name="hint_search_for_material_quantity">搜索物料编号或数量</string>
    <string name="text_setting">设置</string>
    <string name="text_api_address">接口地址</string>
    <string name="text_not_clear_quantity">未结清数</string>
    <string name="text_actual_arrived_goods_quantity">实际到货数</string>
    <string name="text_stock">库存数</string>
    <string name="text_received_quantity">领料数</string>
    <string name="text_recheck_quantity">复盘数</string>
    <string name="text_receipt">入库单</string>
    <string name="text_quantity_in_storage">入库数</string>
    <string name="text_shipment_quantity_colon">发货数:</string>
    <string name="text_picking">拣货</string>
    <string name="text_quantity_on_shelves">上架数:</string>
</resources>
