<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_material_barcode" />

        <EditText
            android:id="@+id/et_func3_itemno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_border"
            android:ems="10"
            android:hint="@string/text_barcode"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/et_func3_quantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rectangle_border"
            android:hint="@string/text_quantity"
            android:imeOptions="actionDone"
            android:inputType="number|numberSigned|numberDecimal"
            android:minEms="2"
            android:singleLine="true"
            android:textColor="#0000FF" />

        <Button
            android:id="@+id/button_func3_recommand"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_recommend_bin"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_bin" />

        <EditText
            android:id="@+id/et_func3_bincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_border"
            android:selectAllOnFocus="true"
            android:ems="10"
            android:hint="@string/text_barcode"
            android:inputType="text" />

        <Button
            android:id="@+id/button_func3_add"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_save"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_func3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorBackgroundGrey"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager">


    </android.support.v7.widget.RecyclerView>

    <ToggleButton
        android:id="@+id/toggleButton_func3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/shape_rectangle_white"
        android:textOff="@string/togglebutton_off_default"
        android:textOn="@string/togglebutton_on_default"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_func3_recommand"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorBackgroundGrey"
        android:visibility="gone"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager">


    </android.support.v7.widget.RecyclerView>

</LinearLayout>