<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/header_background"
    android:divider="?android:attr/listDivider"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingTop="2dp"
    android:paddingRight="5dp"
    android:paddingBottom="2dp"
    android:showDividers="middle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/text_material"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/text_to_bin"
        android:textColor="@color/colorBackgroundGrey"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="14"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/text_quantity"
        android:textColor="@color/colorBackgroundGrey"
        android:textStyle="bold" />

</LinearLayout>