<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:text="@string/text_bincode_barcode" />

        <EditText
            android:id="@+id/et_func2_bincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_border"
            android:ems="10"
            android:hint="@string/text_barcode"
            android:inputType="text"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:text="@string/text_material_barcode" />

        <EditText
            android:id="@+id/et_func2_itemno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_border"
            android:ems="10"
            android:hint="@string/text_barcode"
            android:inputType="text"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/button_func2_save"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_save"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_func2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorBackgroundGrey" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_func2_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/holo_green_dark"
            android:text="@string/text_submit"
            android:textColor="@android:color/background_light" />
    </FrameLayout>

</LinearLayout>