<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/text_shipment_list_code"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_func7_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_border"
            android:ems="10"
            android:hint="@string/text_barcode"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/tv_func7_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_func7_check"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_check"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_func7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorBackgroundGrey" />

</LinearLayout>