<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/melvin_card_shadow"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/dp_10"
    android:paddingTop="@dimen/dp_10">

    <View
        android:id="@+id/view_item_func5_state"
        android:layout_width="3dp"
        android:layout_height="15dp"
        android:layout_margin="3dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/text_material_colon"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_item_func5_itemno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/text_warehouse_colon"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_item_func5_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1111111111111"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/text_bin_colon"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_item_func5_bin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1111111111111"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/text_quantity_colon"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_item_func5_count0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1111111111111"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/text_quantity_colon"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_item_func5_count1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_border"
                android:hint="@string/hint_input_quantity"
                android:imeOptions="actionDone"
                android:inputType="number|numberSigned|numberDecimal"
                android:singleLine="true"
                android:text="1"
                android:textColor="#0000FF"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_func5_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@android:color/holo_red_dark"
            android:textScaleX="1.3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_func5_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="1"
            android:gravity="bottom|right"
            android:text="未提交"
            android:textColor="@color/colorAccent"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>